@@ -1,3 +1,7 @@
+2005-09-03  Bas Wijnen  <shevek@fmf.nl>
+
+	* Dialog.c, main.c, multi.c: Add G_GNUC_UNUSED where appropriate.
+
 0.25 (January 14 2000): A small bug fix.
 * Removed a memory leak reported as Debian bug #50140 by Daniel Burrows.
 * Since my last update, newer versions of GTK have added a mysterious new
